# open-politics-hq

./: .env.example  .gitignore  CLAUDE.md  HANDOVER_DOCUMENT.md  KNOWLEDGE_GRAPH_READY.md  LICENSE.md  README-ARCHITECTURE.md  README.md  compose.override.yml  compose.production.yml  compose.yml  openapi.json  package-lock.json  package.json  prepare.sh  push-registry-containers.sh  setup.sh  test.sh
backend/: CONTENT_SERVICE_ARCHITECTURE.md  Dockerfile  README.md  prestart.sh  pyproject.toml  requirements.txt  start-reload.sh  start.sh
backend/alembic/versions/: add_entity_uuids.py
backend/app/: crud.py  initial_data.py  main.py  models.py  schemas.py  utils.py
backend/app/alembic/: env.py  script.py.mako
backend/app/api/: DOCUMENTATION_INDEX.md  INGESTION.md  MULTIMODAL_IMPLEMENTATION_HANDOVER.md  NEXT_STEPS.md  OVERVIEW.md  README.md  api_router_global.py  asset_context_builder.py  content_tree_builder.py  dependency_injection.py  deps.py  directory_overview.md  global_utils.py  main.py  service_utils.py  system-requirements.md  tree_builder.py  tree_renderer.py
backend/app/cli/: __init__.py  rotate_credentials.py  set_superuser.py
backend/app/core/: beat_utils.py  celery_app.py  config.py  cursor.py  db.py  dispatch.py  events.py  expr.py  filters.py  init_db.py  initial_data.py  initial_data_scenario.py  minio_utils.py  opol_config.py  redis.py  redis_lock.py  scraping_utils.py  security.py  seed.py  similarity.py  sse.py  sso.py  stream.py  task_primitives.py  task_utils.py  tasks.py  tree.py
backend/app/crud/: crud_classification_run.py
backend/app/models/: beat.py
backend/app/tasks/: classification.py  ingestion.py  recurring_classification.py  recurring_ingestion.py  scheduling.py  utils.py
backend/app/tests/: conftest.py  current_prompts.md  full.md  prompt_inspector.py  test_access_control.py  test_aggregate_split_by.py  test_annotation_query_scope.py  test_annotation_views.py  test_archive_upload.py  test_asset_builder_identity.py  test_canon_resolution.py  test_canon_routes.py  test_collaboration.py  test_config.py  test_content_types.py  test_cooccurs_operator.py  test_credential_rotation.py  test_curation_multi_graph.py  test_distinct_values.py  (+19 more)
backend/scripts/: backup.py  inspect_prompts.py  test.sh
(+1418 files in other folders)
